Flexbox should ignore firstLetter pseudo element. https://bugs.webkit.org/show_bug.cgi?id=105126

Patch by Xueqing Huang <huangxueqing@baidu.com> on 2013-02-25
Reviewed by Tony Chang.

Source/WebCore:

The CSS WG decided that first-line and first-letter should not
apply to flex containers.
http://dev.w3.org/csswg/css3-flexbox/issue-cr-2012#issue-13

tests:
css3/flexbox/flexbox-ignore-firstLetter.html
css3/flexbox/flexbox-ignore-container-firstLetter.html

* rendering/RenderBlock.cpp:
(WebCore::findFirstLetterBlock):

LayoutTests:

The CSS WG decided that first-line and first-letter should not
apply to flex containers.
http://dev.w3.org/csswg/css3-flexbox/issues-cr-2012#issue-13

* css3/flexbox/flexbox-ignore-container-firstLetter-expected.txt: Added.
* css3/flexbox/flexbox-ignore-container-firstLetter.html: Added.
* css3/flexbox/flexbox-ignore-firstLetter-expected.txt: Added.
* css3/flexbox/flexbox-ignore-firstLetter.html: Added.
* css3/flexbox/inline-flex-crash-expected.txt:
* css3/flexbox/inline-flex-crash2-expected.txt:

Canonical link: https://commits.webkit.org/129096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143993 268f45cc-cd09-0410-ab3c-d52691b4dbfc